# GTFock

./: .gitignore  .startup.gdb  CMakeLists.txt  build.sh  debug.sh  make.in  run.sh
aligned_malloc/: CMakeLists.txt  aligned_malloc.c  aligned_malloc.h
pfock/: CMakeLists.txt  config.h  fock_buf.c  fock_task.c  one_electron.c  one_electron.h  pfock.c  screening.c  update_F.h
pscf/: CMakeLists.txt  pdgemm.c  purif.c  purif.h  scf.c
